app/assets/css/main.css
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
.richtext,
label {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  text-transform: inherit;
  text-wrap: pretty;
  margin-top: 0;
  margin-bottom: 0;
}
h1 {
  @apply text-6xl tracking-tight;
}
h2 {
  @apply text-4xl tracking-tight;
}
h3 {
  @apply text-2xl tracking-tight;
}
h4 {
  @apply text-xl tracking-tight;
}
h5 {
  @apply text-lg;
}
h6 {
  @apply text-base;
}

.bigRichTextCentered {
  @apply text-center tracking-tight py-16;
}
.bigRichTextCentered p {
  @apply text-xl lg:text-3xl mb-8;
}

.bigRichTextCentered a {
  @apply text-lg mt-4 mb-4;
}

.richtext p {
  @apply mb-8 text-pretty;
}
.richtext {
  @apply text-pretty;
}

section,
header,
footer {
  position: relative;
}

.exhibition-link {
  text-decoration: none !important;
}

.router-link-active {
  text-decoration: underline;
}

.logo-text {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

/* Hide scrollbars for draggable containers */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.scrollbar-hide::-webkit-scrollbar {
  display: none; /* Chrome, Safari and Opera */
}

